resend verification email. User resource update
