# routes/api.php
@@ -24,10 +24,10 @@ $api->version('v1', ['namespace' => 'App\Http\Controllers\Api', 'middleware' => 
     $api->group(array('prefix' => 'public', 'as' => 'public'), function ($api) {
 
         $api->group(array('prefix' => 'auth', 'namespace' => 'Auth', 'as' => 'auth'), function ($api) {
-            $api->post('register',          'AuthController@register')->name('register');
-            $api->post('login',             'AuthController@login')->name('login');
-            $api->post('password/email',    'ForgotPasswordController@sendResetLinkEmail')->name('password.email');
-            $api->post('password/reset',    'ResetPasswordController@reset')->name('password.update');
+            $api->post('register',              'AuthController@register')->name('register');
+            $api->post('login',                 'AuthController@login')->name('login');
+            $api->post('password/email',        'ForgotPasswordController@sendResetLinkEmail')->name('password.email');
+            $api->post('password/reset',        'ResetPasswordController@reset')->name('password.update');
         });
 
         $api->get('help-request-types', 'HelpRequest\HelpRequestTypeController@list');
@@ -67,8 +67,8 @@ $api->version('v1', ['namespace' => 'App\Http\Controllers\Api', 'middleware' => 
             });
         });
 
-        $api->post('user/verify',   'Auth\AuthController@verifyUserData');
-
+        $api->post('user/verify',                'Auth\AuthController@verifyUserData');
+        $api->post('user/verification/resend',   'Auth\AuthController@resendVerificationEmail')->name('verification.resend');
     });
 
 });
